# telegram-support-bot

./: .gitignore  Cargo.toml  README.md
migrations/2024-02-02-161153_initial/: down.sql  up.sql
migrations/2024-02-03-143700_add_info_message_to_users/: down.sql  up.sql
migrations/2024-02-03-151712_add_messages/: down.sql  up.sql
migrations/2024-02-03-155407_add_notes/: up.sql
migrations/2024-02-03-162321_add_info_to_user/: down.sql  up.sql
src/: config.rs  main.rs  metrics.rs  schema.rs
src/database/: entities.rs  mod.rs  sqlite.rs
src/localization/: bundle.rs  common.rs  config.rs  file.rs  mod.rs
src/telegram/: mod.rs  utils.rs
