[package]
name = "telegram-support-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.111"
config = { version = "0.14.0", features = ["toml"] }
chrono = "0.4.26"
async-trait = "0.1.77"
sanitize_html = "0.8.0"

diesel = { version = "2.1.0", features = ["postgres", "sqlite", "returning_clauses_for_sqlite_3_35"] }

tokio = { version = "1.17.0", features = ["rt-multi-thread", "rt", "macros"] }
futures = "0.3.28"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

metrics = "0.22.0"
metrics-util = "0.15.0"
metrics-exporter-prometheus = { version = "0.12.1", features = ["http-listener"] }

teloxide = { git = "https://github.com/alesharik/teloxide.git", features = ["macros"] }
